# Share

./: CONTENT_LICENSE.md  CONTRIBUTING.md  CRYPTO_PROTOCOL_SPEC.md  Cargo.toml  GOVERNANCE_CHARTER.md  GOVERNANCE_CONSTITUTION.md  LICENSE  LICENSE.md  MANIFESTO.md  PAYLOAD_SPECIFICATION.md  PROJECT_DOCS_SUMMARY.md  PROJECT_GROUNDWORK.md  README.md  TECHNICAL_SPEC.md  Tech specs  USER_SPECIFICATION.md
client/: Cargo.toml
client/src/: lib.rs  main.rs
core/: Cargo.toml
core/src/: account.rs  lib.rs  payload.rs
crypto/: Cargo.toml
crypto/src/: encryption.rs  envelopes.rs  hashing.rs  kdf.rs  lib.rs  signatures.rs  threshold.rs
governance/: Cargo.toml
governance/src/: council.rs  lib.rs  vote.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
runtime/src/pallets/governance/: lib.rs
