[package]
name = "platform-crypto"
version = "0.1.0"
edition = "2021"
description = "Cryptographic primitives for the decentralized platform: hashing, encryption, KDF, and threshold signatures."

[dependencies]
# Content Hashing: BLAKE3
blake3 = "1.5"

# Symmetric Encryption: XChaCha20-Poly1305
chacha20poly1305 = "0.10"

# Key Derivation (KDF): Argon2id
argon2 = "0.5"

# Digital Signatures: Ed25519
ed25519-dalek = { version = "2.1", features = ["rand_core"] }

# Threshold Signatures: BLS12-381
threshold_crypto = "0.4"

# Key Wrapping: KW-AES-256
aes-kw = "0.2"

# Public Key Encryption (ECDH for Envelopes)
x25519-dalek = { version = "2.0", features = ["static_secrets", "serde"] }

# Hashing for KDF/ECDH (SHA-256)
sha2 = "0.10"

# Randomness
rand = "0.8"
rand_core = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"

[dev-dependencies]
hex = "0.4"