[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
# Pin to the latest stable Polkadot SDK release tag
polkadot-sdk = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2509-2" }

# FRAME and SP crates are now part of the SDK, so pin them to the same tag
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2509-2" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2509-2" }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2509-2" }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2509-2" }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2509-2" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
